# neptune

./: .github  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/: workflows
.github/actions/install-package/: action.yml
.github/actions/test-e2e/: action.yml
examples/utils/migration_tools/backup_neptune/: README.md
examples/utils/migration_tools/from_wandb/: README.md
neptune-client/: pyproject.toml
neptune-client/.github/: license_header.txt
neptune-client/.github/actions/install-package/: action.yml
neptune-client/.github/actions/test-e2e/: action.yml
neptune-client/.github/actions/test-unit/: action.yml
neptune-client/src/neptune/: __init__.py  envs.py  exceptions.py  handler.py  table.py  typing.py  utils.py
neptune-client/src/neptune/api/: dtos.py  requests_utils.py  searching_entries.py
neptune-client/src/neptune/attributes/: __init__.py  attribute.py  file_set.py  namespace.py  utils.py
neptune-client/src/neptune/cli/: __init__.py  __main__.py  clear.py  collect.py  commands.py  containers.py  path_option.py  status.py  sync.py  utils.py
neptune-client/src/neptune/common/: exceptions.py  oauth.py  utils.py  warnings.py
neptune-client/src/neptune/integrations/: python_logger.py
neptune-client/src/neptune/internal/: backgroud_job_list.py  background_job.py  container_structure.py  credentials.py  extensions.py  operation.py  operation_visitor.py  (+1 more)
neptune-client/tests/e2e/: conftest.py  plot_utils.py  utils.py
neptune-notebooks/: test_requirements.txt
neptune-r/man/: neptune_assign.Rd
(+273 files in other folders)
