[tool.poetry]
name = "neptune"
version = "0.1.0"
description = ""
authors = ["FortiShield <161459699+FortiShield@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "neptune-client/**/*.py" },
    { include = "neptune-notebooks/**/*.py" },
]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
